# citation-organization

./: .gitignore  LICENSE  README.md  citations.json  log.html  output.xml  pyproject.toml  report.html  retro.md  tasks.py
.github/workflows/: main.yml
src/: CitationLibrary.py  UiLibrary.py  citation.py  citation_library.py  citation_repository.py  citations.json  doi_service.py  index.py  ui.py
src/tests/: __init__.py  citation.robot  citation_test.py  export_test.py  resource.robot  select_test.py  test_export.bib  ui.robot
