[tool.poetry]
name = "citation-organization"
version = "0.1.0"
description = ""
authors = ["kurkilmo <ilmo.kurki00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
invoke = "^2.2.0"
requests = "^2.32.3"
bibtexparser = "^1.4.2"

[tool.poetry.group.dev.dependencies]
robotframework = "^7.1.1"
pytest = "^8.3.3"
coverage = "^7.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
